# YPlusCalc

./: CMakeLists.txt  app.cpp  app.h  gui.cpp  gui.fbp  gui.h  yp.cpp  yp.h  ypdialog.cpp  ypdialog.h
